# icu.breakiterator.native

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  build-linux.sh  build-macos.sh  build-windows.ps1  exports.def  exports.txt  generate-bindings.ps1  generate-bindings.rsp  icu.breakiterator.native.nuspec  pack-nuget-managed.ps1  pack-nuget.ps1  patch-icu-static.ps1  verify-dependencies.ps1  verify-dependencies.sh
.github/workflows/: build.yml
bindings/: Example.cs  IcuBreakIteratorNative.cs  ManualLoader.cs  README.md
include/: icu_breakiterator_wrapper.h
src/: breakiterator_wrapper.c
src/IcuBreakIterator.Net/: IcuBreakIterator.Net.csproj  IcuBreakIteratorNative.cs  ManualLoader.cs
